OpenJMLTest/test/gitbug573c/expected
test/gitbug573c/java/lang/Integer.jml:5: error: ';' expected
    xxx yy y zzz
          ^
test/gitbug573c/java/lang/Integer.jml:5: error: ';' expected
    xxx yy y zzz
                ^
error: There is no java or binary file on the sourcepath corresponding to the given jml file: test/gitbug573c/java/lang/Integer.jml
Stopping because of parsing errors
Operation not performed because of parse or type errors
3 errors
